add git-logo image

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1> First version management </h1>
         <p> Managing version using Git </p>
+        <img src="git-logo.png" alt="git logo"></img>
     </body>
 </html>
